# fredy

./: .gitignore  CHANGELOG.md  LICENCE.txt   README.md  index.html  params.json  pom.xml
FredyLib/: .classpath  .project  pom.xml
FredyLib/src/org/mmarini/fuzzy/: AbstractExpression.java  Analisys.java  And.java  Assign.java  Constant.java  EvidenceComparator.java  FuzzyBoolean.java  IEvaluateContext.java  IExpression.java  IExpressionVisitor.java  IScanContext.java  IWeightContext.java  IfOnlyIf.java  Implies.java  Known.java  Not.java  NotAssign.java  (+9 more)
FredyTest/: .classpath  .project
FredyWeb/: .classpath  .project
FredyWeb/WebContent/: evidence.jsp  hypotesys.jsp  index.html  postulate.jsp  scrollBar.jsp  style.css
FredyWeb/WebContent/WEB-INF/: struts-config.xml  struts-config_1_1.dtd  tiles-config_1_1.dtd  tiles-defs.xml  web.xml
FredyWeb/WebContent/layouts/: contentKey.jsp  defaultLayout.jsp  errorLayout.jsp  errorMessage.jsp  leftRight.jsp  stackTrace.jsp  upDown.jsp  window.jsp
FredyWeb/docs/: Fredy.jude  pd.dvi  pd.tex  pd1.tex
FredyWeb/res/: log4j.xml  rules.xsd
docs/: changes.txt  fuzzy.m
fredy-gtk/: CMakeLists.txt  Fredy.cpp  FredyWindow.cpp  Fuzzy.cpp  Inference.cpp  animals.yml
fredy-gtk/include/: Fredy.h  Fuzzy.h  Inference.h
fredy-swing/: .classpath  .project  pom.xml
fredy-swing/docs/: changes.txt
fredy-swing/src/assemble/: dep.xml
fredy-swing/src/main/resources/: animals-rules.xml  rules.xml
fuzzy-lib/: .classpath  pom.xml
fuzzy-lib/src/main/resources/: rules.xsd
src/assemble/: dep.xml
src/main/resources/: animals.yml
(+299 files in other folders)
